# SlidingWindow

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: lib.rs
